@startuml
class FromLCBankruptcySearch {
    + FromLCBankruptcySearch()
}
class LCBankruptcySearchMessageDetailConverter {
    + Convert(source:Q1ResultsType1, destination:MessageDetails, context:ResolutionContext) : MessageDetails
}
class "ITypeConverter`2"<T1,T2> {
}
Profile <|-- FromLCBankruptcySearch
"ITypeConverter`2" "<Q1ResultsType1,MessageDetails>" <|-- LCBankruptcySearchMessageDetailConverter
@enduml
